--- a/app/assets/css/modules/_row.css
+++ b/app/assets/css/modules/_row.css
@@ -1,29 +1,33 @@
 .row {
     display: flex;
-    flex-wrap: wrap;
-
+    flex-direction: column;
+    
     &--gutters {
         margin-right: -65px;
     }
-
+    
     &--gutters > div{
         padding-right: 65px;
     }
+    
+    @mixin atMedium {
+        flex-direction: row;
+        flex-wrap: wrap;
 
-    &__4-of-12 {
-        width: 100%;
-
-        @mixin atMedium {
+        &__4-of-12 {
             width: 33.33%;
         }
-    }
 
-
-    &__8-of-12 {
-        width: 100%;
-
-        @mixin atMedium {
+        &__8-of-12 {
             width: 66.66%;
+        }
+        
+        &__4-of-12--larger {
+            width: 37%;
+        }
+
+        &__8-of-12--smaller {
+            width: 63%;
         }
     }
 }
