--- a/app/assets/css/modules/_wrapper.css
+++ b/app/assets/css/modules/_wrapper.css
@@ -1,11 +1,19 @@
 .wrapper {
     padding: 0 18px;
-    max-width: 1200px;
+    max-width: 1236px;
     margin: auto;
     overflow: hidden;
 
     &--medium {
         max-width: 976px;
+    }
+
+    &--b-margin {
+        margin-bottom: 1rem;
+
+        @mixin atSmall {
+            margin-bottom: 3.875rem;
+        }
     }
 
     .wrapper {
