Testing merging branches in github.com

--- a/app/assets/css/base/_global.css
+++ b/app/assets/css/base/_global.css
@@ -11,3 +11,16 @@ img {
     max-width: 100%;
     height: auto;
 }
+
+p {
+    line-height: 1.65;
+    margin: 1.8rem 0;
+    @mixin atSmall {
+        font-size: 1.125rem;
+    }
+}
+
+a {
+    color: $orange;
+    font-weight: bold;
+}
