--- a/app/assets/css/modules/_headline.css
+++ b/app/assets/css/modules/_headline.css
@@ -40,4 +40,10 @@
     &--b-margin-small {
         margin-bottom: .5em;
     }
+
+    &--no-t-margin {
+        @mixin atMedium {
+            margin-top: 0;
+        }
+    }
 }
