Completed Our feature section

--- a/app/assets/css/modules/_headline.css
+++ b/app/assets/css/modules/_headline.css
@@ -42,6 +42,10 @@
     }
 
     &--no-t-margin {
+        margin-top: 0;
+    }
+
+    &--no-t-margin-til-medium {
         @mixin atMedium {
             margin-top: 0;
         }
