--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -8,3 +8,5 @@
 @import './modules/_page-section.css';
 @import './modules/_headline.css';
 @import './modules/_row.css'; 
+@import './modules/_section-title.css';
+@import './modules/_feature-item.css';
