--- a/app/assets/css/modules/_headline.css
+++ b/app/assets/css/modules/_headline.css
@@ -45,8 +45,8 @@
         margin-top: 0;
     }
 
-    &--no-t-margin-til-medium {
-        @mixin atMedium {
+    &--no-t-margin-til-large {
+        @mixin atLarge {
             margin-top: 0;
         }
     }
