--- a/app/assets/css/modules/_page-section.css
+++ b/app/assets/css/modules/_page-section.css
@@ -9,4 +9,12 @@
         background: $blue;
         color: #ffffff;
     }
+    
+    &--testimonials {
+        background: #e0e6ef;
+        @mixin atSmall {
+            background: url('../../assets/images/testimonials-bg.jpg') center no-repeat;
+            background-size: cover;
+        }
+    }
 }
