--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -1,7 +1,7 @@
 @import 'normalize.css';
 @import './base/_variables.css';
-@import './base/_global.css';
 @import './base/_mixins.css';
+@import './base/_global.css';
 @import './modules/_large-hero.css';
 @import './modules/_btn.css';
 @import './modules/_wrapper.css';
@@ -10,3 +10,4 @@
 @import './modules/_row.css'; 
 @import './modules/_section-title.css';
 @import './modules/_feature-item.css';
+@import './modules/_testimonial.css';
