--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -12,3 +12,4 @@
 @import './modules/_feature-item.css';
 @import './modules/_testimonial.css';
 @import './modules/_sprite.css';
+@import './modules/_footer.css';
