--- a/app/assets/css/modules/_large-hero.css
+++ b/app/assets/css/modules/_large-hero.css
@@ -12,7 +12,15 @@
         left: 0;
         top: 50%;
         text-align: center;
-        transform: translateY(-50%);
+        transform: translateY(-30%);
+
+        @mixin atSmall {
+            transform: translateY(-35%);
+        }
+
+        @mixin atMedium {
+            transform: translateY(-40%);
+        }
     }
 
     &__title {
@@ -22,6 +30,10 @@
         margin: 0;
 
         @mixin atSmall {
+            font-size: 4rem;
+        }
+
+        @mixin atMedium {
             font-size: 4.8rem;
         }
     }
@@ -31,15 +43,26 @@
         font-weight: 300;
         font-size: 1.5rem;
         margin: 0;
+
+        @mixin atSmall {
+            font-size: 2.2rem;
+        }
+
+        @mixin atMedium {
+            font-size: 2.8rem;
+        }
     }
 
     &__description {
         color: #ffffff;
-        font-size: 1.1rem;
         font-weight: 100;
         text-shadow: 2px 2px 2px rgba(0, 0, 0, .1);
 
         @mixin atSmall {
+            font-size: 1.5rem;
+        }
+
+        @mixin atMedium {
             font-size: 1.875rem;
         }
     }
