--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -13,3 +13,6 @@
 @import './modules/_testimonial.css';
 @import './modules/_sprite.css';
 @import './modules/_footer.css';
+@import './modules/_header.css';
+@import './modules/_nav.css';
+@import './modules/_hamburger.css';
