--- a/app/assets/css/modules/_hamburger.css
+++ b/app/assets/css/modules/_hamburger.css
@@ -1,12 +1,40 @@
 .hamburger {
-    width: 20px;
-    height: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 23.21px;
     position: absolute;
     top: 10px; 
     right: 10px;
     cursor: pointer;
-
+    
     @mixin atLarge {
         display: none;
     }
+
+    &::before,
+    &::after,
+    &__line {
+        content: '';
+        width: 30px;
+        height: 3px;
+        background: #fff;
+        transform-origin: left;
+        transition: .3s ease-out;
+    }
+
+    &--cross {
+        &::before {
+            transform: rotate(45deg);
+        }
+
+        .hamburger__line {
+            transform: scaleX(0);
+        }
+
+        &::after {
+            transform: rotate(-45deg);
+        }
+    }
 }
+/* we can say .cross .hamburger::before */
