Completed reveal-on-scroll

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -16,3 +16,4 @@
 @import './modules/_header.css';
 @import './modules/_nav.css';
 @import './modules/_hamburger.css';
+@import './base/_effects.css';
