--- a/app/assets/css/modules/_header.css
+++ b/app/assets/css/modules/_header.css
@@ -9,13 +9,19 @@
         background: rgba($blue, .3);
 
         &--sticky {
-            background: rgba($blue, .9);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, .4);
+            background: $blue;
             nav {
                 padding: 0 .5rem;
             }
 
             .header__logo {
                 transform: scale(.6);
+                background: $orange;
+            }
+
+            .btn {
+                background: $orange;
             }
         }
     }
@@ -67,6 +73,7 @@
 /* The display property might break transition */
 
     &__logo {
+        box-shadow: 0 2px 4px rgba(0, 0, 0, .4);
         padding: 1.5rem 2.5rem;
         background: $blue;
         position: absolute;
