--- a/app/assets/css/modules/_section-title.css
+++ b/app/assets/css/modules/_section-title.css
@@ -1,5 +1,5 @@
 .section-title {
-    font-size: 2.6rem;
+    font-size: 2.4rem;
     font-weight: 300;
     text-align: center;
     margin-top: 0;
@@ -23,5 +23,9 @@
 
     &--blue {
         color: $blue;
+    }
+
+    &--b-margin-small {
+        margin-bottom: 1.3rem;
     }
 }
