--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -17,3 +17,5 @@
 @import './modules/_nav.css';
 @import './modules/_hamburger.css';
 @import './base/_effects.css';
+@import './modules/_lightbox.css';
+@import './modules/_social-icons.css';
