--- a/app/assets/css/modules/_page-section.css
+++ b/app/assets/css/modules/_page-section.css
@@ -13,8 +13,10 @@
     &--testimonials {
         background: #e0e6ef;
         @mixin atSmall {
-            background: url('../../assets/images/testimonials-bg.jpg') center no-repeat;
-            background-size: cover;
+            &.lazyloaded {
+                background: url('../../assets/images/testimonials-bg.jpg') center no-repeat;
+                background-size: cover;
+            }
         }
     }
 }
