--- a/app/assets/css/base/_effects.css
+++ b/app/assets/css/base/_effects.css
@@ -1,6 +1,13 @@
 .effects {
     &--hidden {
         opacity: 0;
+        transition: 1.5s ease-out;
+        transform: scale(1.2);
+    }
+
+    &--visible {
+        opacity: 1;
+        transform: scale(1);
     }
 
     &--fade-in {
